--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="server.js"></script>
 </body>
 </html>
 
