updated form to make some input optional

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
     These are called <strong>smishing attacks</strong> — like phishing, but delivered through SMS.<br><br>
     This form provides a fast, easy way to report suspicious numbers so that carriers can investigate and shut them down.<br><br>
     <em>Don’t worry about accidentally reporting legitimate wrong-number texts — carriers are able to distinguish fraud from genuine messages.</em></p>
-  <p><strong>WE DO NOT SAVE ANY INFORMATION, LIKE YOUR EMAIL OR PHONE NUMBER.  YOU CAN LEAVE THOSE BLANK AND JUST FILL IN THE FORM MANUALLY IF YOU LIKE. WE ONLY NEED THE NUMBER YOU WANT US TO LOOKUP THE CARRIER FOR>/STRONG></P>
+  <p><strong>WE DO NOT SAVE ANY INFORMATION, LIKE YOUR EMAIL OR PHONE NUMBER.  YOU CAN LEAVE THOSE BLANK AND JUST FILL IN THE FORM MANUALLY IF YOU LIKE. WE ONLY NEED THE NUMBER YOU WANT US TO LOOKUP THE CARRIER FOR</STRONG></P>
 
   <form id="reportForm">
     <label for="name">Your Name</label>
